# T-Conforming-Balls

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
T-Conf/: __init__.py  __main__.py  mesh.py
T_Conf/: core_disk.py  core_sphere.py  mesh.py
T_Conf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
